[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-meeting-scheduler"
version = "1.0.0"
description = "Smart Meeting Scheduler OpenEnv Environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"

[tool.setuptools.packages.find]
where = ["."]
